range-loop: Don't warn for non implicitly shared classes

BUG: 362587